# safe-cleaner-lab

./: PRD.md  README.md  pyproject.toml  sa.md
src/safecleaner/: __init__.py  __main__.py  app.py  cleanup.py  cleanup_finalizer.py  diagnostic_sections.py  diagnostics.py  duplicate_result.py  duplicate_review.py  legacy.py  maintenance_audit.py  models.py  notifier.py  report_store.py  reports.py  scanner.py  session_state.py  staging.py  telemetry.py
tests/: test_cleanup.py  test_diagnostics.py  test_duplicate_review.py  test_staging.py
